@@ -15,6 +15,7 @@ Package org.springframework.jdbc
 
 Package org.springframework.jms
 * fixed JmsUtils.buildExceptionMessage to avoid potential NPE (SPR-5275)
+* fixed JmsException/JmsUtils to fully avoid NPEs in case of cause messages being null
 * fixed MessageListenerAdapter's "getSubscriptionName()" to work without delegate as well (SPR-5309 backport)
 
 Package org.springframework.orm
